--- a/manual/plugins/chopper.tex
+++ b/manual/plugins/chopper.tex
@@ -1,5 +1,7 @@
 % $Id: chopper.tex 18466 2008-09-08 18:15:06Z rmenes $ %
 \subsection{Chopper}
+\screenshot{plugins/images/ss-chopper}{Chopper}{img:chopper}
+
   Navigate a cavernous maze without banging into walls, the
   ceiling, or the floor. How long can you fly your chopper?
 
