--- a/manual/platform/clip.tex
+++ b/manual/platform/clip.tex
@@ -1,22 +1,21 @@
 % Id: %
 \def\UseOption{clip}
-\edef\UseOption{\UseOption,HAVE_RB_BL_ON_DISK}
 \edef\UseOption{\UseOption,SANSA_CLIP_PAD}
 \edef\UseOption{\UseOption,HAVE_BACKLIGHT}
-%\edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE} %
+\edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
-\edef\UseOption{\UseOption,sansa}
+\edef\UseOption{\UseOption,sansaAMS}
 
 \newcommand{\playerman}{Sansa}
 \newcommand{\playertype}{Clip}
 \newcommand{\playerlongtype}{\playertype}
-\newcommand{\genericimg}{128x64x1}
-\newcommand{\specimg}{Clip}
+\newcommand{\genericimg}{128x64x1-clip}
+\newcommand{\specimg}{clip}
 %Used to name the player, e.g. ...to the \dap
 \newcommand{\dap}{player}
 %For use when referring to the player. E.g. the \daps\ capacity...
 \newcommand{\daps}{player's}
-\newcommand{firmwarefilename}{\fname{rockbox.sansa}}
+\newcommand{\firmwarefilename}{\fname{rockbox.sansa}}
 \newcommand{\firmwareextension}{\fname{sansa}}
 \newcommand{\screenshotsize}{3cm}
 \newcommand{\disk}{flash storage}
