--- a/manual/platform/keymap-clip.tex
+++ b/manual/platform/keymap-clip.tex
@@ -1,4 +1,4 @@
-% $Id:
+% $Id$
 
 \newcommand{\ButtonLeft}{\btnfnt{Left}}
 \newcommand{\ButtonRight}{\btnfnt{Right}}
@@ -7,24 +7,103 @@
 \newcommand{\ButtonDown}{\btnfnt{Submenu}}
 \newcommand{\ButtonSelect}{\btnfnt{Select}}
 \newcommand{\ButtonPower}{\btnfnt{Power}}
-\newcommand{\ButtonVolUp}{\btnfnt{Volume Up}}
 \newcommand{\ButtonVolDown}{\btnfnt{Volume Down}}
+\newcommand{\ButtonVolUp}{\btnfnt{Volume Up}}
 \newcommand{\ButtonHold}{\btnfnt{Hold}}
 
 %Button actions, standard context
+\newcommand{\ActionStdPrev}{\ButtonUp}
+\newcommand{\ActionStdPrevRepeat}{Long \ButtonUp}
+\newcommand{\ActionStdNext}{\ButtonDown}
+\newcommand{\ActionStdNextRepeat}{Long \ButtonDown}
+\newcommand{\ActionStdCancel}{\ButtonLeft}
+\newcommand{\ActionStdContext}{Long \ButtonSelect}
+\newcommand{\ActionStdQuickScreen}{Long \ButtonDown}
+\newcommand{\ActionQuickScreenExit}{\ButtonSelect}
+\newcommand{\ActionStdMenu}{\ButtonHome}
+\newcommand{\ActionStdOk}{\ButtonSelect{} or \ButtonRight}
+\newcommand{\ActionStdUsbCharge}{\ButtonSelect}
 
 %Button actions, wps context
+\newcommand{\ActionWpsPlay}{\ButtonUp}
+\newcommand{\ActionWpsSkipNext}{\ButtonRight}
+\newcommand{\ActionWpsSkipPrev}{\ButtonLeft}
+\newcommand{\ActionWpsSeekBack}{Long \ButtonLeft}
+\newcommand{\ActionWpsSeekFwd}{Long \ButtonRight}
+
+\newcommand{\ActionWpsStop}{\ButtonPower}
+\newcommand{\ActionWpsVolDown}{\ButtonVolDown}
+\newcommand{\ActionWpsVolUp}{\ButtonVolUp}
+
+\newcommand{\ActionWpsQuickScreen}{Long \ButtonDown}
+\newcommand{\ActionWpsMenu}{\ButtonDown}
+\newcommand{\ActionWpsContext}{Long \ButtonSelect}
+\newcommand{\ActionWpsBrowse}{\ButtonSelect}
+\newcommand{\ActionWpsPitchScreen}{\ButtonSelect{} + \ButtonUp}
+\newcommand{\ActionWpsIdThreeScreen}{\ButtonSelect{} + \ButtonDown}
+
+\newcommand{\ActionWpsAbSetBNextDir}{\ButtonPower{} + \ButtonRight}
+\newcommand{\ActionWpsAbSetAPrevDir}{\ButtonPower{} + \ButtonLeft}
+\newcommand{\ActionWpsAbReset}{\ButtonPower{} + \ButtonUp}
 
 %Button actions, tree context
+\newcommand{\ActionTreeWps}{\ButtonUp}
+\newcommand{\ActionTreeStop}{\ButtonPower}
+\newcommand{\ActionTreeEnter}{\ButtonSelect{} or \ButtonRight}
+\newcommand{\ActionTreeParentDirectory}{\ButtonLeft}
 
 %Button actions, YesNo context
+\newcommand{\ActionYesNoAccept}{\ButtonSelect}
 
 %Button actions, Setting context
+\newcommand{\ActionSettingInc}{\ButtonRight}
+\newcommand{\ActionSettingDec}{\ButtonLeft}
 
 %Button actions, Virtual Keyboard Context
+\newcommand{\ActionKbdLeft}{\ButtonLeft}
+\newcommand{\ActionKbdRight}{\ButtonRight}
+\newcommand{\ActionKbdSelect}{\ButtonSelect}
+\newcommand{\ActionKbdDone}{Long \ButtonSelect}
+\newcommand{\ActionKbdAbort}{\ButtonPower}
+\newcommand{\ActionKbdUp}{\ButtonUp}
+\newcommand{\ActionKbdDown}{\ButtonDown}
+\newcommand{\ActionKbdCursorLeft}{\ButtonVolUp}
+\newcommand{\ActionKbdCursorRight}{\ButtonVolDown}
+\newcommand{\ActionKbdBackSpace}{\ButtonHome}
+\newcommand{\ActionKbdPageFlip}{}
 
 %Button actions, Pitch Screen context
+\newcommand{\ActionPsToggleMode}{\ButtonHome}
+\newcommand{\ActionPsIncSmall}{\ButtonRight}
+\newcommand{\ActionPsIncBig}{Long \ButtonRight}
+\newcommand{\ActionPsDecSmall}{\ButtonLeft}
+\newcommand{\ActionPsDecBig}{Long \ButtonLeft}
+\newcommand{\ActionPsNudgeLeft}{\ButtonLeft}
+\newcommand{\ActionPsNudgeRight}{\ButtonRight}
+\newcommand{\ActionPsReset}{\ButtonSelect}
+\newcommand{\ActionPsExit}{\ButtonPower{} or \ButtonUp}
 
 %Button actions, Recording screen context
+%\newcommand{\ActionRecPause}{\ButtonUp}
+%\newcommand{\ActionRecExit}{\ButtonDown}
+%\newcommand{\ActionRecNewfile}{\ButtonHome}
+%\newcommand{\ActionRecMenu}{Long \ButtonSelect}
+%\newcommand{\ActionRecSettingsInc}{\ButtonRight}
+%\newcommand{\ActionRecSettingsDec}{\ButtonLeft}
+%\newcommand{\ActionRecPrev}{\ButtonVolDown}
+%\newcommand{\ActionRecNext}{\ButtonVolUp}
 
 %Button actions, FM radio context
+\newcommand{\ActionFMPreset}{\ButtonSelect}
+\newcommand{\ActionFMMenu}{\ButtonDown}
+\newcommand{\ActionFMMode}{\ButtonHome}
+\newcommand{\ActionFMStop}{Long \ButtonUp}
+\newcommand{\ActionFMExit}{\ButtonPower}
+\newcommand{\ActionFMPlay}{\ButtonUp}
+\newcommand{\ActionFMSettingsInc}{\ButtonVolUp} %?
+\newcommand{\ActionFMSettingsDec}{\ButtonVolDown} %?
+\newcommand{\ActionFMPrev}{\ButtonLeft}
+\newcommand{\ActionFMNext}{\ButtonRight}
+
+%Button actions, Bookmark screen context
+\newcommand{\ActionBmDelete}{\ButtonHome}
