--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -1349,15 +1349,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "Piep volume"
+    swcodec: "Nummer overslaan signaal"
   </dest>
   <voice>
     *: none
-    swcodec: "Piep volume"
+    swcodec: "Nummer overslaan signaal"
   </voice>
 </phrase>
 <phrase>
