--- a/manual/plugins/random_folder_advance_config.tex
+++ b/manual/plugins/random_folder_advance_config.tex
@@ -21,6 +21,7 @@ it you need to have both \fname{-/CDs} and \fname{CDs} as entries.
   \fname{/.rockbox/folder\_advance\_list.txt}
 \item[Import List From Textfile] Imports the list from
   \fname{/.rockbox/folder\_advance\_list.txt}
+\item[Play Shuffled] Starts playback with the selected directories in random order. Tracks within a directory will be played in normal order. The plugin will exit after starting playback.
 \item[Quit]
 \end{description}
 
